samples/_failures_safe/1761650127_6eadb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2a3a5cf.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_e2a3a5cf.c:130:20: error: missing terminating " character
  130 |             printf("%s [%s
      |                    ^~~~~~~
./samples/SAFE/__tmp_e2a3a5cf.c:130:13: error: expected expression at end of input
  130 |             printf("%s [%s
      |             ^~~~~~
./samples/SAFE/__tmp_e2a3a5cf.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2a3a5cf.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2a3a5cf.c:130:13: error: expected declaration or statement at end of input
